# vd-cli

./: .gitignore  .golangci.yml  .goreleaser.yaml  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  go.mod  go.sum  install.sh  mise.toml
.e2e/: config.json
.github/workflows/: code-review.yml  docs.yml  pr-guard.yml  release-please.yml  release.yml  test.yml
.opencodereview/: rule.json
cmd/vd/: main.go
desktop/: .gitignore  README.md  go.mod  go.sum  main.go  wails.json
docs/: astro.config.mjs  commands.md  config-schema.md  faq.md  migration.md  package-lock.json  package.json  usage.md  vd-cli-design.html
docs/content/: commands.md  config-schema.md  faq.md  index.mdx  migration.md  observability.md  usage.md
docs/decisions/: 0001-mcp-servers-as-vd-cli-extensions.md  0002-codex-dynamic-workflow-via-agents-sdk.md  0003-goreact-layering.md  README.md
docs/public/: CNAME
docs/src/: content.config.ts
extensions/: README.md
extensions/codex-workflow/: README.md  extension.toml  pyproject.toml
extensions/codex-workflow/codex_workflow/: __init__.py  orchestrator.py  server.py
extensions/codex-workflow/schema/: run_workflow.v1.json
extensions/codex-workflow/tests/: test_smoke.py
hooks/: .vendored-from  README.md  agent-notify.py  dev-rules-reminder.cjs  hooks.toml  install.py  pr-merge-guard.py  session-init.cjs  statusline.cjs  subagent-init.cjs  teammate-idle-handler.cjs
hooks/lib/: config.cjs  (+2 more)
scripts/: sync-hooks.sh
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+778 files in other folders)
