[project]
name = "codex-workflow"
version = "0.1.0"
description = "Deterministic multi-agent workflow orchestrator over codex mcp-server (the run_workflow MCP tool)."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "jsonschema>=4.0",
]

[project.scripts]
codex-workflow-server = "codex_workflow.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codex_workflow"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
